--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/diff-match-patch": "^1.0.36",
+    "@types/minimatch": "^5.1.2",
     "commander": "^12.1.0",
     "crypto-js": "^4.2.0",
-    "fs-extra": "^11.2.0"
+    "diff-match-patch": "^1.0.5",
+    "fs-extra": "^11.2.0",
+    "minimatch": "^10.0.1"
   }
 }
