--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "track-it",
   "version": "1.0.0",
   "main": "index.js",
+  "bin": "build/index.js",
+
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
@@ -9,7 +11,10 @@
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "pkg": "npm run build && pkg . --target node18-linux,node18-macos,node18-win"
+
+
   },
   "keywords": [],
   "author": "",
@@ -25,6 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
+    "pkg": "^5.8.1",
     "prettier": "^3.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -38,5 +44,12 @@
     "diff-match-patch": "^1.0.5",
     "fs-extra": "^11.2.0",
     "minimatch": "^10.0.1"
+  },
+  "pkg": {
+    "outputPath": "dist",
+    "assets": [
+      "package.json"
+    ]
   }
+
 }
